Now added an option to only display one preview at once per tweet (CSS-based)

--- a/source/content.css
+++ b/source/content.css
@@ -38,3 +38,8 @@
 .btd-grayscale-notification-icons i.icon.activity-indicator {
 	color: #737373;
 }
+
+/* Don't display thumbnails that aren't the first thumbnails of the tweet (because TweetDeck display duplicates thumbnails sometimes, and that's annoying) */
+.btd-one-thumbnail .js-media-preview-container:not(:first-of-type) {
+	display: none;
+}
