[Improvement] Hid the sidebar now there is only one section

--- a/source/fancy-settings/source/custom.css
+++ b/source/fancy-settings/source/custom.css
@@ -61,6 +61,10 @@ div.welcome {
 	margin:0;
 }
 
-.notification p:first-of-type {
-	/*margin-bottom: 0;*/
+#sidebar {
+	display: none;
+}
+
+#content {
+	left: 0;
 }
