[Improvement] The "alerts" in the Settings page look much better

--- a/source/fancy-settings/source/custom.css
+++ b/source/fancy-settings/source/custom.css
@@ -42,7 +42,6 @@ div.alert {
 	padding: 15px;
 	box-sizing: border-box;
 	color: #a94442;
-	font-weight:bold;
 	margin: 20px 0;
 }
 
@@ -53,8 +52,12 @@ div.welcome {
 	padding: 15px;
 	box-sizing: border-box;
 	color: #3c763d;
-	font-weight:bold;
 	margin: 20px 0;
+}
+
+div.welcome a {
+	font-weight:bold;
+	color:#3c763d;
 }
 
 .notification ul {
