[Improvement] Trying *again* a different effect

--- a/source/content.css
+++ b/source/content.css
@@ -76,13 +76,15 @@
 } 
 
 .btd-blurred-modals .js-app-content.app-content, .btd-blurred-modals header.js-app-header {
-	transition: all 520ms ease;
-	-webkit-filter: saturate(100%) brightness(1);
+	-webkit-transition-property: -webkit-transform, -webkit-filter;
+	-webkit-transition-duration: 0.2s, 300ms;
+	-webkit-transition-timing-function:ease,ease;
+	-webkit-filter: blur(0) saturate(100%) brightness(1);
 	-webkit-transform:translateZ(0);
 }
 
 .btd-blurred-modals.btd-modal-opened .js-app-content.app-content, .btd-blurred-modals.btd-modal-opened header.js-app-header {
-	-webkit-filter: saturate(0) brightness(0.5);
+	-webkit-filter: blur(4px) saturate(0) brightness(.5);
 	-webkit-transform:translateZ(0);
 }
 
