[Fix] Hiding YouTube previews in Messages view since TweetDeck doesn't handle them properly.

--- a/source/content.css
+++ b/source/content.css
@@ -114,3 +114,8 @@
 .btd-small-icons-compose .js-schedule-datepicker-holder > div > div.caret {
 	left: 27%;
 }
+
+/* Hiding thumbnails in Messages columns as they're bugged for the YouTube ones */
+.column-type-message .js-media-preview-container {
+	display: none;
+}
