--- a/source/content.css
+++ b/source/content.css
@@ -137,6 +137,14 @@
 	display: none;
 }
 
+.btd-username-typeahead .typeahead strong.fullname {
+	display: none;
+}
+
+.btd-username-typeahead .typeahead span.username {
+	color:#222;
+}
+
 /***********************
 EMOJI COMPOSER
 ************************/
