[Fix] Rounded avatar on the new layout for Notifications

--- a/source/content.css
+++ b/source/content.css
@@ -8,6 +8,10 @@
 	-webkit-border-radius:50%;
 	border-radius:50%;
 }
+.btd-circle-avatars .avatar.size24 {
+	-webkit-border-radius: 50%;
+	border-radius: 50%;
+}
 
 /* Nice opacity fading animation on tweet hover */
 .btd-profile-pictures-fading .tweet-avatar {
