--- a/source/fancy-settings/source/custom.css
+++ b/source/fancy-settings/source/custom.css
@@ -77,6 +77,18 @@ div.welcome a.btn {
 	margin:0;
 }
 
+#sidebar {
+	display: none;
+}
+
+#content {
+	left: 0;
+}
+
+.setting.bundle {
+	max-width: 750px;
+}
+
 .thumb-opt {
 	width: 50%;
 	display: inline-block;
