--- a/source/styles/content.scss
+++ b/source/styles/content.scss
@@ -32,4 +32,12 @@
 	.js-schedule-datepicker-holder > div > div.caret {
 		left: 27%;
 	}
+.btd-no_columns_icons {
+	header > i.column-type-icon.icon {
+		display:none;
+	}
+
+	header > h1.column-title {
+		padding-left: 10px;
+	}
 }
