Re-added EmojiPanel

--- a/source/styles/content.scss
+++ b/source/styles/content.scss
@@ -148,4 +148,5 @@
 
 .btd-light-theme.btd-minimal_mode .js-app-content {
 	background-color: #fcfcfc;
-}
+}@import "emojiPanel";
+@import "emojis";
