blurred_modals takes all the width now

--- a/source/styles/content.scss
+++ b/source/styles/content.scss
@@ -90,6 +90,7 @@
 .btd-blurred_modals.btd-open-modal-on {
 	#open-modal .med-fullpanel {
 		background:transparent;
+		max-width: none;
 	}
 
 	.ovl, .overlay {
