Lightbox links don’t show until the content is loaded

--- a/source/styles/content.scss
+++ b/source/styles/content.scss
@@ -98,6 +98,14 @@
 	}
 }
 
+.js-embeditem .js-mediaembed > a {
+	transition: opacity .2s ease;
+}
+
+.js-embeditem:not(.is-loaded) .js-mediaembed > a {
+	opacity: 0;
+}
+
 @import "minimalMode";
 @import "emojiPanel";
 @import "emojis";
