--- a/source/styles/_minimalMode.scss
+++ b/source/styles/_minimalMode.scss
@@ -7,6 +7,7 @@
 
 .btd-dark-theme.btd-minimal_mode .app-columns {
 	padding: 0 6px;
+	padding-left: 0;
 }
 
 .btd-dark-theme.btd-minimal_mode .js-column.column {
