--- a/source/styles/_emojiPanel.scss
+++ b/source/styles/_emojiPanel.scss
@@ -157,3 +157,8 @@ EMOJI COMPOSER
 .emoji-popover .category-chooser > a:hover,.emoji-popover .category-chooser > a.active {
 	opacity:1;
 }
+
+.js-add-emojis {
+  margin-top: -2px;
+  height: 40px;
+}
