new emojis added

--- a/source/styles/_emojiPanel.scss
+++ b/source/styles/_emojiPanel.scss
@@ -83,7 +83,7 @@ EMOJI COMPOSER
 .emoji-popover .btd-emoji {
 	width:20px;
 	height:20px;
-	margin: 3px 7px;
+	margin: 1px;
 	display: inline-block;
 }
 
@@ -149,7 +149,7 @@ EMOJI COMPOSER
 .emoji-popover .category-chooser > a {
 	width:20px;
 	height: 20px;
-	margin:3px 7px;
+	margin:1px;
 	cursor:pointer;
 	opacity: .6;
 }
